objects/Account.object
<CustomObject>
    <fields>
        <fullName>Electrical_Engineer_License_Expiration__c</fullName>
        <label>Electrical Engineer License Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Electrical_Engineer_License_Number__c</fullName>
        <label>Electrical Engineer License Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Electricians_License_Information__c</fullName>
        <label>Electricians License Information</label>
        <length>350</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Engineering_Type__c</fullName>
        <inlineHelpText>Enter the type of engineering firm where this account should be classified
NOT REQUIRED for non-engineering Accounts</inlineHelpText>
        <label>Engineering Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Civil</fullName>
                </value>
                <value>
                    <fullName>Structural</fullName>
                </value>
                <value>
                    <fullName>Geotechnical</fullName>
                </value>
                <value>
                    <fullName>Environmental</fullName>
                </value>
                <value>
                    <fullName>Field Measurement</fullName>
                </value>
                <value>
                    <fullName>Testing</fullName>
                </value>
                <value>
                    <fullName>Survey</fullName>
                </value>
                <value>
                    <fullName>Mechanical</fullName>
                </value>
                <value>
                    <fullName>Corrosion</fullName>
                </value>
                <value>
                    <fullName>Arborist</fullName>
                </value>
                <value>
                    <fullName>Landscape</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Preferred Partner</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Estimated_available_rooftop__c</fullName>
        <formula>Rooftop_square_footage__c *  Percent_unobstructed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Estimated available rooftop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Exempt_Payee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exempt Payee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FEIN__c</fullName>
        <description>Federal Employment Identification Number</description>
        <label>FEIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fees__c</fullName>
        <label>Fees Assessed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Submittal</fullName>
                </value>
                <value>
                    <fullName>Permit Issue</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Date_Marketing_Qualified__c</fullName>
        <label>Account First Date Marketing-Qualified</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Cost__c</fullName>
        <label>Fixed Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Follow_Up_Code__c</fullName>
        <formula>IF( 
EPC_Opportunity_Stage__c &gt; 0, IMAGE(&quot;/servlet/servlet.FileDownload?file=01580000001632h&quot;,&quot;PURPLE&quot;, 18, 18),
IF( 
OwnerId  &lt;&gt; &quot;005800000076JDP&quot; &amp;&amp; Days_w_o_Activity__c &gt; 60, IMAGE(&quot;/servlet/servlet.FileDownload?file=0158000000162sa&quot;,&quot;RED&quot;, 18, 18),
IF(
OwnerId  &lt;&gt; &quot;005800000076JDP&quot; &amp;&amp; (Days_w_o_Activity__c &lt; 60 &amp;&amp; Days_w_o_Activity__c &gt;=  30), IMAGE(&quot;/servlet/servlet.FileDownload?file=0158000000162u9&quot;,&quot;YELLOW&quot;, 18,18),
IF(
OwnerId  &lt;&gt; &quot;005800000076JDP&quot; &amp;&amp; Days_w_o_Activity__c &lt; 30, IMAGE(&quot;/servlet/servlet.FileDownload?file=0158000000162tl&quot;,&quot;GREEN&quot;, 18, 18),
&quot;&quot;))))</formula>
        <inlineHelpText>Green = Current Call Activity
Yellow = Time to contact
Red = It’s been a long time</inlineHelpText>
        <label>Follow Up Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Form_Type__c</fullName>
        <label>Form Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1099-MISC</fullName>
                </value>
                <value>
                    <fullName>1099-MISC(Rents)</fullName>
                </value>
                <value>
                    <fullName>1099-INT</fullName>
                </value>
                <value>
                    <fullName>1099-DIV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Effective_Date__c</fullName>
        <inlineHelpText>Date the General Liability Insurance became effective for this Vendor</inlineHelpText>
        <label>GL Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Expiration_Date__c</fullName>
        <inlineHelpText>Date General Liability Insurance expires for this Vendor
Assistant PM&apos;s are notified of this expiration and will reach out to the Vendor for updated Certs
**Accounting will not pay a Vendor with expired insurance**</inlineHelpText>
        <label>GL Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GL_Insurance_Obtained__c</fullName>
        <inlineHelpText>Have we received the General Liability Insurance for this Vendor?</inlineHelpText>
        <label>GL Insurance Obtained?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GL_Insurance_Required__c</fullName>
        <inlineHelpText>Is General Liability Insurance Required for this Vendor?</inlineHelpText>
        <label>GL Insurance Required?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GroSolar__c</fullName>
        <defaultValue>&apos;FALSE&apos;</defaultValue>
        <inlineHelpText>Was the project transferred to GroSolar? Defaults to &quot;False&quot; for all new accounts.</inlineHelpText>
        <label>GroSolar</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hourly_Rate__c</fullName>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Inco_Terms__c</fullName>
        <label>Inco Terms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Expiration_Date__c</fullName>
        <label>Insurance Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insurance_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Insurance Obtained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Integrated_AC_Disco_Allowed__c</fullName>
        <label>Integrated AC Disco Allowed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Interconnection_App_Date__c</fullName>
        <description>Date application for interconnection was submitted.</description>
        <label>Interconnection App Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Interconnection_Approval_Date__c</fullName>
        <description>Date interconnection was approved by utility.</description>
        <label>Interconnection Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inverter_In_Stock__c</fullName>
        <description>Determines if Inverters are Available for Project</description>
        <label>Inverter Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need to Order</fullName>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Partially Delivered</fullName>
                </value>
                <value>
                    <fullName>In Stock - Reserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Issue_Fee__c</fullName>
        <label>Issue Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Job_Number__c</fullName>
        <externalId>true</externalId>
        <label>Job Number</label>
        <length>8</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Job_Type__c</fullName>
        <inlineHelpText>What sector is the customer classified under? 
**Only for Customer Accounts**</inlineHelpText>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Public</fullName>
                </value>
                <value>
                    <fullName>Private</fullName>
                </value>
                <value>
                    <fullName>Non-Profit</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Residential</fullName>
                </value>
                <value>
                    <fullName>Residential - Multi-Unit</fullName>
                </value>
                <value>
                    <fullName>PV Direct</fullName>
                </value>
                <value>
                    <fullName>Small Utility</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Jon_Cerino__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Jon Cerino</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LHAccountID__c</fullName>
        <description>used with lookup helper</description>
        <formula>Id</formula>
        <inlineHelpText>used with lookup helper to bring into page the SFID # for this account</inlineHelpText>
        <label>LHAccountID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Land_Area__c</fullName>
        <label>Land Area</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_60_Days__c</fullName>
        <formula>AND(
( TODAY() - LastActivityDate &lt;= 60),
( TODAY() - LastActivityDate &gt; 7))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 60 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_7_Days__c</fullName>
        <formula>(TODAY() - LastActivityDate &lt;= 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Last 7 Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Call_Made__c</fullName>
        <description>used with Roll Up Helper to pull most recent historical call activity type from activity history</description>
        <inlineHelpText>pulls the most recent historical call activity type from activity history</inlineHelpText>
        <label>Account Last Call Made</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Roofing_Date__c</fullName>
        <label>Last Roofing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lead_Time_days__c</fullName>
        <formula>Total_Lead_Days__c /Permits_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Lead Time (days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadsManager__Active__c</fullName>
        <label>Active</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LeadsManager__FindLeadsManager__c</fullName>
        <formula>HYPERLINK(&apos;/apex/LeadsManager__FindLeadsManager?website=&apos; + Website + &apos;&amp;accountName=&apos; + Name + &apos;&amp;retURL=&apos;+ Id , &apos;View all Leads &amp; Contacts&apos;,&apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Leads &amp; Contacts From This Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LeadsManager__FirstActivityDate__c</fullName>
        <label>First Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LeadsManager__NextActivityDate__c</fullName>
        <label>Next Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lien_Waiver_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>auto fills with name of related Contact with Type = Lien Waiver, used in conjunction with RH and pulls in to Liens object for email purposes</description>
        <inlineHelpText>auto fills with name of related Contact with Type = Lien Waiver</inlineHelpText>
        <label>Lien Waiver Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Lien Waiver Contact)</relationshipLabel>
        <relationshipName>Accounts4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Logo_Document_Name__c</fullName>
        <inlineHelpText>The name of the Document that is an image of the Account&apos;s logo.</inlineHelpText>
        <label>Logo Document Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MALatitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MALongitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MSA_Exceptions__c</fullName>
        <label>MSA Exceptions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MSA_Executed_Date__c</fullName>
        <inlineHelpText>Date MSA fully Executed</inlineHelpText>
        <label>MSA Executed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MSA_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Have we received the signed MSA from this Vendor?</inlineHelpText>
        <label>MSA Obtained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Main_PV_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Main PV Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Accounts (Main PV Contact)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Method_of_Payment__c</fullName>
        <label>Method of Payment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Card</fullName>
                </value>
                <value>
                    <fullName>Check Only</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mobile_Phone__c</fullName>
        <label>Mobile Phone</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Modules_In_Stock__c</fullName>
        <description>Determines if modules are available for project.</description>
        <label>Modules Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Need to Order</fullName>
                    <default>true</default>
                    <label>Need to Order</label>
                </value>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>In Stock</fullName>
                </value>
                <value>
                    <fullName>Delivered</fullName>
                </value>
                <value>
                    <fullName>Partially Delivered</fullName>
                </value>
                <value>
                    <fullName>In Stock - Reserved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Most_Recent_Contact_Call_Activity__c</fullName>
        <inlineHelpText>looks at activity both (open and history) for the account and populates most recent date for those with type call - conversation&apos; , &apos;in-person meeting&apos; , &apos;initial conversation&apos; , &apos;initial on-site meeting&apos; , &apos;initial meeting&apos;</inlineHelpText>
        <label>Most Recent Call Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NDA_Obtained__c</fullName>
        <defaultValue>false</defaultValue>
        <label>NDA Obtained?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>N_A__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check boxes for accounts to state if they are either union or pay prevailing wages</description>
        <inlineHelpText>Does not apply</inlineHelpText>
        <label>N/A</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_on_Utility_Bill__c</fullName>
        <label>Name on Utility Bill</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Open_Activity__c</fullName>
        <inlineHelpText>pulls date from upcoming open activities</inlineHelpText>
        <label>Next Open Activity</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Copies_to_Submit__c</fullName>
        <label>Number of Copies to Submit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
                <value>
                    <fullName>8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Number_of_Floors__c</fullName>
        <label>Number of Floors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Parking_Spaces__c</fullName>
        <inlineHelpText>Suggested formula for estimating carport capacity = Number of parking spaces * 2.5</inlineHelpText>
        <label>Number of Parking Spaces</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OMMonthlyStatementEmails__c</fullName>
        <description>used with rollup helper and conga to send monthly statements for O&amp;M accounting</description>
        <label>O&amp;M MonthlyStatement Emails</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OM_Disqualification_Category__c</fullName>
        <inlineHelpText>Mandatory to disqualify. Why is the sales effort halting?</inlineHelpText>
        <label>O&amp;M Disqualification Category</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>O_M_Qualification_Status__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Doesn&apos;t see need for O&amp;M</fullName>
                </value>
                <value>
                    <fullName>Doesn’t own solar assets</fullName>
                </value>
                <value>
                    <fullName>Under PPA</fullName>
                </value>
                <value>
                    <fullName>Our price too expensive</fullName>
                </value>
                <value>
                    <fullName>Unreasonable contract terms</fullName>
                </value>
                <value>
                    <fullName>Poor system conditions</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Locked into long-term O&amp;M contract</fullName>
                </value>
                <value>
                    <fullName>Under original EPC O&amp;M contract</fullName>
                </value>
                <value>
                    <fullName>Do O&amp;M in-house</fullName>
                </value>
                <value>
                    <fullName>Borrego price too high</fullName>
                </value>
                <value>
                    <fullName>Borrego doesn&apos;t have sufficient presence</fullName>
                </value>
                <value>
                    <fullName>Happy with provider, won’t discuss</fullName>
                </value>
                <value>
                    <fullName>Bad opinion of Borrego service/quality</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Account_Type__c</fullName>
        <defaultValue>&quot;Bronze&quot;</defaultValue>
        <inlineHelpText>O&amp;M Account type to categorize and identify high potential customers</inlineHelpText>
        <label>O&amp;M Account Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gold</fullName>
                </value>
                <value>
                    <fullName>Silver</fullName>
                </value>
                <value>
                    <fullName>Bronze</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Customer_Type__c</fullName>
        <inlineHelpText>What is this account&apos;s relationship to the solar site?</inlineHelpText>
        <label>O&amp;M Customer Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Asset Manager</fullName>
                </value>
                <value>
                    <fullName>Developer/EPC</fullName>
                </value>
                <value>
                    <fullName>Owner-Portfolio</fullName>
                </value>
                <value>
                    <fullName>Owner-Single Site</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Disqualification_Specifcs__c</fullName>
        <inlineHelpText>What feedback did you get from the customer?</inlineHelpText>
        <label>O&amp;M Disqualification Specifcs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>O_M_Prospecting_Stage__c</fullName>
        <inlineHelpText>What is the status of your conversations with this customer?</inlineHelpText>
        <label>O&amp;M Prospecting Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet Attempted</fullName>
                </value>
                <value>
                    <fullName>Attempted, Not Reached</fullName>
                </value>
                <value>
                    <fullName>Contacted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Qualification_Status__c</fullName>
        <inlineHelpText>Do you know if this customer is a good target for O&amp;M services?</inlineHelpText>
        <label>O&amp;M Qualification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Qualified</fullName>
                </value>
                <value>
                    <fullName>Disqualified</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>O_M_Site_States__c</fullName>
        <label>O&amp;M Site States</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Old_Id__c</fullName>
        <label>Old Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>One_Default_Address__c</fullName>
        <description>Counts the number of address marked as default. Enforces only one default address per Vendor</description>
        <label>One Default Address</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Online_Utility_App_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Tells us if we have completed the online utility interconnection application.</description>
        <label>Online Utility App Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Operations_Status__c</fullName>
        <inlineHelpText>Is the Subcontractor approved by ops?</inlineHelpText>
        <label>Operations Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending Approval</fullName>
                    <default>true</default>
                    <label>Pending Approval</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Not Approved</fullName>
                </value>
                <value>
                    <fullName>Not Recommended (Blacklist)</fullName>
                    <label>Not Recommended</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Other_O_M_Provider_Name__c</fullName>
        <description>if Other is chosen in Current O&amp;M provider please populate the name of the provider in this field.</description>
        <inlineHelpText>if Other is chosen in Current O&amp;M provider please populate the name of the provider in this field.</inlineHelpText>
        <label>Other O&amp;M Provider Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Outlook__c</fullName>
        <inlineHelpText>Qualitative assessment of risk, a near-term future directional view of credit risk:  positive, neutral, or negative.</inlineHelpText>
        <label>Outlook</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Positive</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Negative</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Owner_Name__c</fullName>
        <label>Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Occupied__c</fullName>
        <label>Owner Occupied</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                    <default>true</default>
                    <label>Unknown</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>